# seum

./: .gitlab-ci.yml  LICENSE  README.md  dune-project  nasm.opam  seum.opam
src/nasm/: README.md  dune  lexer.mll  nasm.ml  nasm.mli  nasm_ex.ml  nasm_untyped_syntax.ml  parser.mly
src/seum/: dune  seum.ml  seum.mli  seum_basic.ml  seum_strongly_typed.ml
test/nasm/: dune  main.ml
test/nasm/examples/: fibonacci.input  fibonacci.output  float.input  float.output  hello_world.input  hello_world.output  multiple_lines.input  multiple_lines.output  operand_string_single_quote.input  operand_string_single_quote.output  print.input  print.output  simple.input  simple.output  simple_hex.output  simple_with_comments.input  simple_without_label.output
test/seum/: dune  main.ml
test/seum/res/: maxofthree.output
