opam-version: "2.0"
authors: [ "Danny Willems <be.danny.willems@gmail.com>" ]
maintainer: [ "Danny Willems <be.danny.willems@gmail.com>" ]
synopsis: "NASM parser"
homepage: "https://gitlab.com/dannywillems/seum"
dev-repo: "git+https://gitlab.com/dannywillems/seum.git"
bug-reports: "https://gitlab.com/dannywillems/seum/issues"
license: "MIT"
depends: [
  "ocaml" {>= "4.14"}
  "dune" {>= "3.0.0"}
  "alcotest" {with-test}
  "menhir" { >= "20220210" }
  "ppx_deriving"
]
build: [[ "dune" "build" "-j" jobs "-p" name "@install" ]]
run-test: [[ "dune" "runtest" "-p" name "-j" jobs ]]
